# trading212-gmail-to-yfinance

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
trading212exporter/: main.py  trading212.py
