[tool.poetry]
name = "trading212exporter"
version = "0.1.0"
description = ""
authors = ["Dan Croitoru <dann.croitoru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
simplegmail = "^3.0.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
isort = "^5.5.2"
ipython = "^7.18.1"
ipdb = "^0.13.3"
mypy = "^0.782"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
